2005-09-11 Francois Proulx <francois.proulx@gmail.com>
	* Fixed dependency check, found a workaround for the file_exists problem
	
2005-09-11 Francois Proulx <francois.proulx@gmail.com>
	* Added dependency check for Phlickr
	
2005-09-11 Francois Proulx <francois.proulx@gmail.com>
	* Fixed Flickr support
	* Now using PEAR version of Phlickr
	* Download the latest package and install like this : pear install PhlickrXYZ.tar.gz
	
2005-09-10 Francois Proulx <francois.proulx@gmail.com>
	* Fixed dependency check
	
2005-09-10 Francois Proulx <francois.proulx@gmail.com>
	* Removed many blank lines after php tags
	* added more checks, for dates etc...
	* changed sorting mode
	
2005-09-10 Benoit Grégoire  <bock@step.polymtl.ca>
	* Add UI to add a new Network
	* Improve UI to add a new Node and new Content

2005-09-10 Philippe April  <philippe@ilesansfil.org>
	* signup.php: Fixed bug in detecting is the user is already part of the
	network.
	* classes/{Authenticator,Network,Node}.php: isset, and issues preventing
	users from logging out.
	* add BASEPATH to most files with require_once
	* Added dependency checking class
	* Don't show the admin menu if user does not have access
	* Got rid of user_log_detailed.html, using stats.php instead

2005-09-10 Francois Proulx <francois.proulx@gmail.com>
	* Automatically redirect user to login form when trying to access admin
	* Added various isset, empty tests, vars init in stats (to avoid php warning)

2005-09-08 Philippe April  <philippe@ilesansfil.org>
	* New stats system with graphs
	* Changed the UI a bit to reflect this change
	* Updated stylesheet

2005-09-08 Benoit Grégoire  <bock@step.polymtl.ca>
	* portal/index.php:  Custom portal redirect now operational.
	
2005-09-08 Benoit Grégoire  <bock@step.polymtl.ca>
	* MainUI:  Move call to garbage_collect() here.
	* portal/index.php:  New feature:  Custom portal redirect.
	* rework much of the logout code
	
2005-09-07 Benoit Grégoire  <bock@step.polymtl.ca>